<resources>
    <string name="app_name">NetEase News</string>
    <string name="channel_id">360_news</string>
    <string name="version_build_num">更新序号：Build 237</string>
    <string name="versionnum">V3.2.1</string>
    <string name="copyright">Copyright © 2013 NetEase Inc. All Rights Reserved</string>
    <string name="application_name_CHN">网易新闻</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="net_err">网络不给力</string>
    <string name="post">提交</string>
    <string name="wait">请稍侯…</string>
    <string name="exit_tips">再按一次退出网易新闻</string>
    <string name="offline_title">离线较消耗较多流量</string>
    <string name="offline_tips">当前为3G/2G网络，确定要继续离线吗？</string>
    <string name="offline_cancel">算了</string>
    <string name="offline_goon">好的，继续</string>
    <string name="biz_navi_news">新闻</string>
    <string name="biz_navi_local_news">本地新闻</string>
    <string name="biz_navi_pics">图片</string>
    <string name="biz_navi_ugc">话题</string>
    <string name="biz_navi_ties">跟贴</string>
    <string name="biz_navi_vote">投票</string>
    <string name="biz_navi_micro">微生活</string>
    <string name="base_pull_list_pull">下拉可以刷新</string>
    <string name="base_pull_list_release">松开可以刷新</string>
    <string name="base_pull_list_refreshing">正在刷新…</string>
    <string name="base_load_err">加载失败</string>
    <string name="base_loading">正在加载…</string>
    <string name="base_load_more">显示下%d条</string>
    <string name="base_loading_more">%d条载入中…</string>
    <string name="base_loading_more_net_err_retry">网络错误,点击重试</string>
    <string name="base_load_err_retry">加载失败,点击重试</string>
    <string name="biz_ad_update">立即升级</string>
    <string name="biz_ad_install">立即安装</string>
    <string name="biz_ad_no_tip">不再提示</string>
    <string name="biz_version_update_title">升级网易新闻客户端</string>
    <string name="biz_version_update_do">立刻升级</string>
    <string name="biz_version_update_cancel">暂不升级</string>
    <string name="biz_sns_err_msg_rebind">请重新绑定帐号</string>
    <string name="biz_sns_err_msg_same_cotent">分享的内容与上次重复</string>
    <string name="biz_sns_err_msg_type_null">分享类型错误</string>
    <string name="biz_sns_err_msg_bind_retry">绑定失败，请重试</string>
    <string name="biz_sns_err_msg_bind_netease_not_weibo">绑定失败，帐号未开通网易微博！</string>
    <string name="biz_sns_err_msg_bind_sina_refused">绑定失败，新浪微博授权被拒绝！</string>
    <string name="biz_sns_err_msg_bind_page">加载页面失败,请重试</string>
    <string name="biz_sns_success_msg_bind">绑定成功</string>
    <string name="biz_sns_success_msg_unbind">解除绑定成功</string>
    <string name="biz_sns_type_name_netease">网易微博</string>
    <string name="biz_sns_type_name_sina">新浪微博</string>
    <string name="biz_sns_type_name_qq">腾讯微博</string>
    <string name="biz_sns_type_name_renren">人人网</string>
    <string name="biz_sns_type_name_ydnote">有道云笔记</string>
    <string name="biz_sns_type_name_weixin">微信</string>
    <string name="biz_sns_type_name_weixin_timeline">朋友圈</string>
    <string name="biz_sns_type_name_qzone">QQ空间</string>
    <string name="biz_sns_type_name_email">邮箱</string>
    <string name="biz_sns_type_name_sms">短信</string>
    <string name="biz_sns_bind_to">绑定%s</string>
    <string name="biz_sns_share_to">分享到</string>
    <string name="biz_sns_publish_to">分享到%s</string>
    <string name="biz_sns_publish_limit">还可输入 %s 字</string>
    <string name="biz_sns_publish_overflow">已超出 %s 字</string>
    <string name="biz_sns_share_sms_text">我在网易新闻手机客户端，发现了文章</string>
    <string name="biz_sns_share_sms_pictext">我在网易新闻手机客户端，发现了图集</string>
    <string name="biz_sns_share_sms_tietext">我在网易新闻手机客户端，发现了跟贴</string>
    <string name="biz_sns_share_sms_pic_address">图集地址:</string>
    <string name="biz_sns_share_sms_pic_txt">网易新闻客户端-图片分享</string>
    <string name="biz_sns_share_url_wap">手机访问:</string>
    <string name="biz_sns_share_url_www">电脑访问:</string>
    <string name="biz_sns_share_with_u">，与你分享</string>
    <string name="biz_sns_share_email_title">网易新闻分享</string>
    <string name="biz_sns_share_email_pictitle">网易图集分享</string>
    <string name="biz_sns_share_email_tietitle">网易跟贴分享</string>
    <string name="biz_sns_select_email_client">请选择Email客户端软件:</string>
    <string name="biz_sns_share_sns_text">分享网易新闻</string>
    <string name="biz_sns_share_sns_pictext">分享网易图集</string>
    <string name="biz_sns_share_sns_tietext">分享网易跟贴</string>
    <string name="biz_sns_share_sns_micro">分享网易微新闻</string>
    <string name="biz_sns_share_published">已发送</string>
    <string name="biz_sns_share_email_text">我在网易新闻手机客户端，发现了这篇文章，想与你分享：</string>
    <string name="biz_sns_share_wx_noclient">抱歉，您未安装微信客户端，无法进行微信分享</string>
    <string name="biz_sns_share_wx_nosupport_timeline">抱歉，仅微信4.2以上版本支持分享到朋友圈</string>
    <string name="biz_sns_manager_bind">绑定</string>
    <string name="biz_sns_manager_unbind">取消绑定</string>
    <string name="biz_sns_publis_hint">请说点儿什么吧...</string>
    <string name="biz_sns_err_msg_textoverflow">字数已超出</string>
    <string name="biz_update_start">新版本已经开始更新</string>
    <string name="biz_update_download_complete">下载完成</string>
    <string name="biz_update_download_complete_install">下载已完成,点击进行安装</string>
    <string name="biz_update_in_download_list">已经添加到下载列表</string>
    <string name="biz_update_download_error">抱歉，下载错误</string>
    <string name="biz_update_notice_tips">点击升级为最新:V%s版</string>
    <string name="biz_setting_title">设置</string>
    <string name="biz_setting_category_mainpage">正文</string>
    <string name="biz_setting_fullscreen">新闻正文页单击全屏</string>
    <string name="biz_setting_fullscreen_title">正文单击全屏</string>
    <string name="biz_setting_news_textsize_dlg_title">正文字体</string>
    <string name="biz_setting_category_flowcontrol">流量控制</string>
    <string name="biz_setting_flowcontrol_autodownload">离线后不需要网络也可以看新闻</string>
    <string name="biz_setting_flowcontrol_autodownload_title">WLAN时自动离线</string>
    <string name="biz_setting_flowcontrol_download_picture">在非WLAN下帮您节省流量</string>
    <string name="biz_setting_flowcontrol_download_picture_title">3G/2G网络为无图模式</string>
    <string name="biz_setting_flowcontrol_clearcache">清除缓存的临时文件</string>
    <string name="biz_setting_flowcontrol_clearcache_title">清除缓存</string>
    <string name="biz_setting_flowcontrol_cache_size">当前缓存大小</string>
    <string name="biz_setting_category_push">推送</string>
    <string name="biz_setting_push">是否自动推送</string>
    <string name="biz_setting_push_title">自动推送</string>
    <string name="biz_setting_category_account">帐号设置</string>
    <string name="biz_setting_account_my">我的帐号</string>
    <string name="biz_setting_account_other">绑定其他平台</string>
    <string name="biz_setting_category_application">系统设置</string>
    <string name="biz_setting_application_text_size">正文字号</string>
    <string name="biz_setting_application_push">要闻推送</string>
    <string name="biz_setting_application_offline">Wi-Fi下自动离线</string>
    <string name="biz_setting_application_no_picture">2G/3G网络不下载图片</string>
    <string name="biz_setting_application_scroll_load">列表自动加载更多</string>
    <string name="biz_setting_application_clear_cache_manually">手动清理缓存</string>
    <string name="biz_setting_plugin">插件</string>
    <string name="biz_setting_category_plugin">插件管理</string>
    <string name="biz_setting_other_settings">其他设置</string>
    <string name="biz_setting_other_fresh_guide">新手引导</string>
    <string name="biz_setting_other_new_features">新版特性</string>
    <string name="biz_setting_other_about">关于</string>
    <string name="biz_setting_other_feedback">意见反馈</string>
    <string name="biz_setting_clear_cache">正在清除缓存…</string>
    <string name="biz_setting_clear_cache_desc">清除缓存的临时文件</string>
    <string name="biz_setting_clear_cache_success">成功清除缓存</string>
    <string name="biz_setting_clear_cache_failed">清除缓存失败</string>
    <string name="biz_setting_setting_success">设置成功</string>
    <string name="biz_setting_sure">确定要清除缓存吗？</string>
    <string name="biz_setting_current_cache">当前缓存大小</string>
    <string name="biz_setting_guide_navi">右滑切换导航</string>
    <string name="biz_setting_guide_column">点击编辑栏目</string>
    <string name="biz_setting_guide_setting">左滑查看设置</string>
    <string name="biz_setting_guide_slide">左右滑动切换导航</string>
    <string name="biz_plugin_weather_ip_query_failed">没有找到您当前位置,点击重试</string>
    <string name="biz_plugin_weather_ip_query_city">定位到的城市</string>
    <string name="biz_plugin_weather_ip_querying">正在查找…</string>
    <string name="biz_plugin_weather_search_city_hint">搜索城市</string>
    <string name="biz_plugin_weather_current_city">当前选择的城市-</string>
    <string name="biz_plugin_weather_frequent_city">经常选择的城市</string>
    <string name="biz_plugin_weather_update_time_format">MM月dd日 HH:mm更新</string>
    <string name="biz_plugin_weather_today_time_format">MM月dd日</string>
    <string name="biz_plugin_weather_actionbar_title">%s天气</string>
    <string name="biz_plugin_weather_no_data_tip">无法获取天气信息</string>
    <string name="biz_plugin_weather_selectcity_title">选择城市</string>
    <string name="biz_plugin_weather_default_city">北京</string>
    <string name="biz_plugin_searchnews_title">搜索新闻</string>
    <string name="biz_plugin_searchnews_search_no_data">无符合“%s”的内容</string>
    <string name="biz_plugin_searchnews_msg_net_error">网络连接错误</string>
    <string name="biz_plugin_searchnews_search_invalid">请输入有效的关键字</string>
    <string name="biz_plugin_searchnews_news_search_tips">请输入关键字…</string>
    <string name="biz_news_detailpage_video_net_category_title">系统提示</string>
    <string name="biz_news_detailpage_get_news_error">获取文章失败</string>
    <string name="biz_news_detailpage_video_net_category_tip">您正在使用3G/2G网络，观看视频将会产生较大资费，确定要继续观看吗？</string>
    <string name="biz_news_detailpage_video_goon_see">继续观看</string>
    <string name="biz_news_detailpage_overflow_comment">写跟贴</string>
    <string name="biz_news_detailpage_overflow_share">转发</string>
    <string name="biz_news_detailpage_overflow_collect">收藏</string>
    <string name="biz_news_detailpage_overflow_forbidden">文章未加载完，操作无效</string>
    <string name="biz_news_list_reply_tag">%s跟贴</string>
    <string name="biz_news_list_spectial_tag">专题</string>
    <string name="biz_news_column_subscribe">订阅</string>
    <string name="biz_news_column_cancel_subscribe">取消订阅</string>
    <string name="biz_news_column_subscribe_search_hint">搜索</string>
    <string name="biz_news_column_subscribe_search_empty">没有找到符合“%s”的栏目</string>
    <string name="biz_news_column_subscribe_title">订阅感兴趣的</string>
    <string name="biz_news_column_recommend_subscribe">推荐栏目订阅</string>
    <string name="biz_news_column_edit_subscribe">添加订阅</string>
    <string name="biz_news_column_edit">编辑订阅</string>
    <string name="biz_news_column_edit_complete">完成</string>
    <string name="biz_news_column_edit_delete">删除(%d)</string>
    <string name="biz_ad_flowremind_tipcontent">Welcome to NetEase News client software, the client to use a completely free, the discharge fee, traffic fee please consult the local operator, whether to allow to establish a connection?</string>
    <string name="biz_ad_flowremind_ok">OK</string>
    <string name="biz_ad_flowremind_exit">Exit</string>
    <string name="biz_pc_account_account_ssl">SSL安全登录</string>
    <string name="biz_pc_account_account_findpwd">忘记密码？</string>
    <string name="biz_pc_account_account_login_login">登 录</string>
    <string name="biz_pc_account_account_login_psw_hint">请输入密码</string>
    <string name="biz_pc_account_account_login_account_hint">请输入帐号</string>
    <string name="biz_pc_account_sign_top_title">注 册</string>
    <string name="biz_pc_update_nick_msg">*保存成功后，将同步修改跟贴、微博、论坛昵称</string>
    <string name="biz_account_login_mail_tip">目前只支持网易163、126、188、yeah邮箱</string>
    <string name="biz_pc_account_label_nickname">昵 称：</string>
    <string name="biz_pc_account_label_local">所在地：</string>
    <string name="biz_pc_account_label_account">帐 号：</string>
    <string name="biz_pc_main_default_nickname">我的帐号</string>
    <string name="biz_pc_main_default_desc">可同步栏目订阅、跟贴等内容</string>
</resources>