<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/loginRoot" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/biz_plugin_weather_text1" android:gravity="left|center" android:id="@id/mail_tip" android:background="@drawable/biz_plugin_weather_selectcity_index_bg" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/biz_account_login_mail_tip" />
    <RelativeLayout android:id="@id/RelativeLayout02" android:paddingTop="14.0dip" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="10.0dip">
        <AutoCompleteTextView android:textSize="18.0sp" android:id="@id/loginusername" android:background="@drawable/base_search_edittext_selector" android:paddingLeft="40.0dip" android:saveEnabled="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="3.0dip" android:hint="@string/biz_pc_account_account_login_account_hint" android:completionThreshold="1" android:dropDownSelector="@drawable/base_action_bar_dropdown_selector" android:layout_alignParentTop="true" android:inputType="textEmailAddress" android:dropDownHorizontalOffset="20.0dip" />
        <LinearLayout android:gravity="center_vertical" android:id="@id/linearlayout01" android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_alignLeft="@id/loginusername" android:layout_alignTop="@id/loginusername" android:layout_alignBottom="@id/loginusername">
            <ImageView android:id="@id/user_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.5dip" android:src="@drawable/biz_pc_account_usr_icon" />
        </LinearLayout>
        <EditText android:textSize="18.0sp" android:id="@id/loginpassword" android:background="@drawable/base_search_edittext_selector" android:paddingLeft="40.0dip" android:saveEnabled="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginRight="1.0dip" android:hint="@string/biz_pc_account_account_login_psw_hint" android:maxLength="32" android:layout_below="@id/loginusername" android:layout_alignLeft="@id/loginusername" android:layout_alignRight="@id/loginusername" android:inputType="textPassword" />
        <LinearLayout android:gravity="center_vertical" android:id="@id/linearlayout02" android:paddingLeft="7.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@id/loginpassword" android:layout_alignTop="@id/loginpassword" android:layout_alignRight="@id/linearlayout01" android:layout_alignBottom="@id/loginpassword">
            <ImageView android:id="@id/pwd_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.5dip" android:src="@drawable/biz_pc_account_pwd_icon" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="14.0dip">
        <CheckBox android:id="@id/switch_ssl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:checked="true" android:button="@drawable/biz_normal_checkbox_selector" />
        <TextView android:textAppearance="@style/biz_pc_profile_account_login_title_style" android:id="@id/text_ssl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/biz_pc_account_account_ssl" android:singleLine="true" android:layout_weight="1.0" />
        <TextView android:textAppearance="@style/biz_pc_profile_account_findpwd_title_style" android:id="@id/text_findpwd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/biz_pc_account_account_findpwd" android:singleLine="true" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="14.0dip">
        <Button android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/do_register_text" android:background="@drawable/biz_pc_account_register_btn_selector" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/biz_pc_account_sign_top_title" android:layout_weight="5.0" />
        <Button android:textAppearance="@style/biz_pc_profile_account_login_style" android:textColor="#ffffffff" android:id="@id/do_login_button" android:background="@drawable/biz_pc_account_login_btn_selector" android:layout_width="152.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:text="@string/biz_pc_account_account_login_login" android:layout_weight="8.0" />
    </LinearLayout>
</LinearLayout>
