<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/pc_maing_bg" android:background="@drawable/base_layout_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/biz_pc_main_info" android:background="@drawable/biz_pc_zone_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/biz_pc_main_info_profile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/biz_pc_main_info_profile_margin">
            <com.netease.nr.base.view.MyImageView android:id="@id/biz_pc_main_info_profile_avatar" android:background="@drawable/biz_pc_default_small_profile_bg" android:layout_width="@dimen/biz_pc_main_info_profile_head_size" android:layout_height="@dimen/biz_pc_main_info_profile_head_size" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <TextView android:textAppearance="@style/biz_pc_profile_nickname_style" android:gravity="top|left|center" android:id="@id/biz_pc_main_info_profile_nickname" android:paddingBottom="@dimen/biz_pc_main_info_profile_nickname_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_pc_account_profile_head_margin" android:text="@string/biz_pc_main_default_nickname" android:singleLine="true" android:layout_toRightOf="@id/biz_pc_main_info_profile_avatar" android:layout_alignTop="@id/biz_pc_main_info_profile_avatar" />
            <TextView android:textAppearance="@style/biz_pc_profile_desc_style" android:id="@id/biz_pc_main_info_profile_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/biz_pc_main_default_desc" android:layout_below="@id/biz_pc_main_info_profile_nickname" android:layout_alignLeft="@id/biz_pc_main_info_profile_nickname" android:layout_centerVertical="true" />
        </RelativeLayout>
        <ImageView android:id="@id/divider" android:paddingLeft="@dimen/biz_pc_main_plugin_list_icon_margin" android:paddingRight="@dimen/biz_pc_main_plugin_list_icon_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/biz_pc_plugin_line" android:scaleType="fitXY" />
        <GridView android:gravity="center" android:id="@id/biz_pc_main_info_other" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/biz_pc_main_info_profile_margin" android:layout_marginRight="@dimen/biz_pc_main_info_profile_margin" android:listSelector="@drawable/biz_sns_select_item_bg" android:numColumns="3" />
    </LinearLayout>
    <RelativeLayout android:id="@id/biz_pc_main_plugin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/biz_pc_main_info">
        <TextView android:textAppearance="@style/biz_pc_profile_desc_style" android:textSize="13.0sp" android:gravity="center" android:id="@id/biz_pc_main_plugin_notice" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/biz_pc_main_plugin_list_title_margin" android:layout_marginRight="@dimen/biz_pc_main_plugin_list_title_margin" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        <TextView android:textAppearance="@style/biz_pc_profile_desc_style" android:textSize="13.0sp" android:gravity="center" android:id="@id/biz_pc_main_plugin_setting" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/biz_pc_main_plugin_list_title_margin" android:text="@string/biz_setting_plugin" android:layout_toLeftOf="@id/biz_pc_main_plugin_notice" android:layout_alignBottom="@id/biz_pc_main_plugin_notice" />
        <ListView android:id="@id/biz_pc_main_plugin_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/biz_pc_main_info_profile_margin" android:layout_marginRight="@dimen/biz_pc_main_info_profile_margin" android:layout_above="@id/biz_pc_main_plugin_notice" style="@style/base_plugin_listview_style" />
    </RelativeLayout>
</RelativeLayout>
